crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_duplicate_names.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_duplicate_names.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..42,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..41,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..36,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 8..9,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 8..9,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 8..9,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 11..15,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 11..12,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 11..12,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 13..15,
                                            value: Int(
                                                10,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ],
                        vararg: Some(
                            Parameter {
                                range: 17..19,
                                node_index: NodeIndex(None),
                                name: Identifier {
                                    id: Name("a"),
                                    range: 18..19,
                                    node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                range: 21..22,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 21..22,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 21..22,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 24..30,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 24..30,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 24..25,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 27..30,
                                                id: Name("str"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                                default: None,
                            },
                        ],
                        kwarg: Some(
                            Parameter {
                                range: 32..35,
                                node_index: NodeIndex(None),
                                name: Identifier {
                                    id: Name("a"),
                                    range: 34..35,
                                    node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 38..41,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 38..41,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(a, a=10, *a, a, a: str, **a): ...
  |            ^ Syntax Error: Duplicate parameter "a"
  |


  |
1 | def foo(a, a=10, *a, a, a: str, **a): ...
  |                   ^ Syntax Error: Duplicate parameter "a"
  |


  |
1 | def foo(a, a=10, *a, a, a: str, **a): ...
  |                      ^ Syntax Error: Duplicate parameter "a"
  |


  |
1 | def foo(a, a=10, *a, a, a: str, **a): ...
  |                         ^ Syntax Error: Duplicate parameter "a"
  |


  |
1 | def foo(a, a=10, *a, a, a: str, **a): ...
  |                                   ^ Syntax Error: Duplicate parameter "a"
  |
