crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_alias_incomplete_stmt.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_alias_incomplete_stmt.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..21,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..4,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..4,
                            id: Name("type"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 10..11,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 10..11,
                            func: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 10..11,
                                    value: Call(
                                        ExprCall {
                                            node_index: NodeIndex(None),
                                            range: 10..11,
                                            func: Attribute(
                                                ExprAttribute {
                                                    node_index: NodeIndex(None),
                                                    range: 10..11,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 10..11,
                                                            id: Name("__xonsh__"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    attr: Identifier {
                                                        id: Name("cmd"),
                                                        range: 10..11,
                                                        node_index: NodeIndex(None),
                                                    },
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 10..11,
                                                node_index: NodeIndex(None),
                                                args: [
                                                    StringLiteral(
                                                        ExprStringLiteral {
                                                            node_index: NodeIndex(None),
                                                            range: 10..11,
                                                            value: StringLiteralValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 10..11,
                                                                        node_index: NodeIndex(None),
                                                                        value: "x",
                                                                        flags: StringLiteralFlags {
                                                                            quote_style: Single,
                                                                            prefix: Empty,
                                                                            triple_quoted: false,
                                                                            unclosed: false,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("hide"),
                                        range: 10..11,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 10..11,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(None),
                    range: 12..20,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 17..18,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    type_params: None,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 20..20,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type
2 | type x
3 | type x =
  |         ^ Syntax Error: Expected an expression
  |
